# stm8-samples

./: .gitignore  README.md  README_app.md
app/app_stm8_peri_hello/: makefile
app/app_stm8_peri_led/: main.c
bootloader/: Makefile
stm8-cmake/: CMakeLists.txt  README.md
stm8-cmake/STM8S_StdPeriph_Driver/: CMakeLists.txt
stm8-cmake/tools/: setup_tools.sh
tools/: README.md  stm8flash.tar.bz2
